# autonomous-deal-hunter-ai

./: .gitignore  Dockerfile  README.md  pyproject.toml
core/: __init__.py  __main__.py  gradio_app.py  main.py
core/agents/: autonomous_planning_agent.py  base_agent.py  deals.py  ensemble_agent.py  messenger_agent.py  rag_agent.py  scanner_agent.py  specialist_agent.py
core/embeddings/: embedding_model.py
core/ingestion/: document_loader.py
core/observability/: langfuse_config.py  metrics_prometheus.py  tracing_jaeger.py
core/rag/: haystack_rag.py  langchain_rag.py  llamaindex_rag.py
core/services/: pricer_ephemeral.py  pricer_service.py
core/utils/: hello_modal.py  llama_modal.py  log_utils.py
core/vectorstore/: chroma_store.py
core/visualization/: tsne_visualizer.py
guide/: agent_architecture.md  guide.md
